test/types/records/recursive/recursive-in-other2.good
recursive-in-other2.chpl:11: error: record 'C' cannot contain a recursive field 'b' whose type 'B' contains 'C'
