test/types/records/recursive/recursive-in-other2.chpl

record A {
  var b : B;
}

record B {
  var c : C;
}

record C {
  var b : B;
}

var a = new A();
